# fastapi_shipment_import_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_migrations.sh
app/: celery_app.py  main.py
app/api/: app.py  errors.py
app/api/v1/: imports.py  runtime.py  shipments.py
app/common/: pagination.py
app/core/: logging.py  settings.py
app/db/: base.py  session.py
app/db/models/: __init__.py  import_dispatch_outbox.py  import_error.py  import_job.py  shipment.py
app/domain/: errors.py  import_states.py  shipment_rules.py
app/imports/: __init__.py  dto.py  jsonb.py
app/imports/parsers/: __init__.py  errors.py  workbook_contract.py  xlsx_parser.py
app/imports/repositories/: __init__.py  import_claim_repository.py  import_dispatch_outbox_repository.py  import_error_repository.py  import_job_repository.py  import_progress_repository.py  import_repository.py  shipment_repository.py
app/storage/: local_file_storage.py
app/workers/: beat_schedule.py  startup_recovery.py  tasks.py
migrations/: README  env.py
migrations/versions/: 0001_step1_runtime_baseline.py  0002_step2_models_constraints_and_repositories.py  0003_import_fingerprint_lookup_index.py
samples/: duplicate_codes_import.xlsx  missing_headers_import.xlsx  mixed_import.xlsx  valid_chunking_1000_rows.xlsx  valid_import.xlsx
scripts/: run_migrations.sh
tests/: conftest.py
tests/load/: k6_import_idempotency.js
tests/support/: docker_runtime.py  imports.py  outbox.py  postgres_database.py
(+68 files in other folders)
